# streaming_chatbot

./: README.md  pyproject.toml
src/assistant_agent/: .env  __init__.py  main.py
